[package]
name         = "sealstack-receipts"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
sealstack-common = { path = "../sealstack-common" }
serde      = { workspace = true }
serde_json = { workspace = true }
time       = { workspace = true }
ulid       = { workspace = true }
